--- a/.github/workflows/main_solopreneur-toolkit-api-2025.yml
+++ b/.github/workflows/main_solopreneur-toolkit-api-2025.yml
@@ -24,23 +24,24 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Create and start virtual environment
+      - name: Install dependencies
+        # THE FIX: Tell the runner to work inside the 'backend' folder
+        working-directory: ./backend
         run: |
           python -m venv venv
           source venv/bin/activate
+          pip install -r requirements.txt
       
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
+          # THE FIX: Only upload the backend code
           path: |
-            .
-            !venv/
+            backend/
+            !backend/venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -68,4 +69,3 @@ jobs:
         with:
           app-name: 'solopreneur-toolkit-api-2025'
           slot-name: 'Production'
-          
