--- a/.github/workflows/main_solopreneur-toolkit-api-2025.yml
+++ b/.github/workflows/main_solopreneur-toolkit-api-2025.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -25,30 +25,23 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        # THE FIX: Tell the runner to work inside the 'backend' folder
+        # THE FIX: This tells the runner to work inside the 'backend' folder
         working-directory: ./backend
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
       
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          # THE FIX: Only upload the backend code
-          path: |
-            backend/
-            !backend/venv/
+          # THE FIX: This tells the uploader to only package the 'backend' folder
+          path: backend/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read 
 
     steps:
       - name: Download artifact from build job
@@ -69,3 +62,5 @@ jobs:
         with:
           app-name: 'solopreneur-toolkit-api-2025'
           slot-name: 'Production'
+          # THE FIX: This tells the deployment action to use the package we downloaded
+          package: .
