--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,3 @@
-# Core framework
-fastapi==0.110.3
-
-# ASGI server with standard extras (needed for uvicorn workers)
-uvicorn[standard]==0.23.2
-
-# Process manager
-gunicorn==21.2.0
-
-# Optional FastAPI extras
-email-validator==2.3.0
-httpx==0.28.1
-jinja2==3.1.6
-python-multipart==0.0.20
-orjson==3.11.3
-ujson==5.11.0
-
-# Additional dependencies from your stack
 annotated-types==0.7.0
 anyio==4.10.0
 bcrypt==4.3.0
@@ -26,28 +8,39 @@ colorama==0.4.6
 cryptography==45.0.7
 dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 environs==14.3.0
+fastapi==0.116.1
 fastapi-cli==0.0.10
 fastapi-cloud-cli==0.1.5
 fastapi_cors==0.0.6
 greenlet==3.2.4
+gunicorn==23.0.0
 h11==0.16.0
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.28.1
+idna==3.10
 itsdangerous==2.2.0
+Jinja2==3.1.6
 markdown-it-py==4.0.0
+MarkupSafe==3.0.2
 marshmallow==4.0.1
 mdurl==0.1.2
+orjson==3.11.3
 packaging==25.0
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
-pydantic>=2.0,<3.0
+pydantic==2.11.7
 pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
+pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.1.0
 rich-toolkit==0.15.1
@@ -58,8 +51,12 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+starlette==0.47.3
 typer==0.17.4
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+ujson==5.11.0
+urllib3==2.5.0
+uvicorn==0.35.0
 watchfiles==1.1.0
 websockets==15.0.1
