--- a/.github/workflows/main_solopreneur-toolkit-api-2025.yml
+++ b/.github/workflows/main_solopreneur-toolkit-api-2025.yml
@@ -1,4 +1,23 @@
-       with:
+name: Build and deploy Python app to Azure Web App - solopreneur-toolkit-api-2025
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python version
+        uses: actions/setup-python@v5
+        with:
           python-version: '3.10'
 
       - name: Install dependencies
@@ -9,9 +28,6 @@
           source venv/bin/activate
           pip install -r requirements.txt
       
-
-
-
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Upload artifact for deployment jobs
