--- a/.github/workflows/main_solopreneur-toolkit-api-2025.yml
+++ b/.github/workflows/main_solopreneur-toolkit-api-2025.yml
@@ -1,3 +1,6 @@
+# This is the final, corrected workflow file.
+# It delegates the build process entirely to Azure.
+
 name: Build and deploy Python app to Azure Web App - solopreneur-toolkit-api-2025
 
 on:
@@ -7,58 +10,26 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python version
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        # THE FIX: Tell the runner to work inside the 'backend' folder
-        working-directory: ./backend
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
-      
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          # THE FIX: Only upload the backend code
-          path: |
-            backend/
-            !backend/venv/
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # Required for login
+      contents: read # Required for checkout
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-      
+      # Step 1: Check out your repository code
+      - uses: actions/checkout@v4
+
+      # Step 2: Login to Azure
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9063F53DE9104D7184598CDE6B6CA313 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A06D0F6CB7E2443881AA9AD8BB97F8A6 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A8BB9FBD137347B6BEF843308B2FC03D }}
-
+      
+      # Step 3: Deploy the code to Azure App Service
+      # Azure's build system will now take over, using the PROJECT setting we configured.
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
